--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -102,13 +102,13 @@
 						<div class="project-data">
 							<h3>Натяжной потолок на кухне</h3>
 							<ul>
-									<li><i class="fa fa-object-ungroup squareSmall outline"></i> <strong>Монтаж полотна 8 м2</strong>3 040 р.</li>
-									<li><i class="fa fa-square-o squareSmall outline"></i> <strong>Количество углов 4 шт</strong>1 900 р.</li>
-									<li><i class="fa fa-circle-o squareSmall outline"></i> <strong>Окантовка трубы</strong>1 900 р.</li>
-									<li><i class="fa fa-lightbulb-o squareSmall outline"></i> <strong>Установка люстры:1шт</strong>50,000 р.</li>
+									<li><i class="fa fa-object-ungroup squareSmall outline"></i> <strong>Монтаж полотна 8 м2</strong>2 800 р.</li>
+									<li><i class="fa fa-square-o squareSmall outline"></i> <strong>Количество углов 4 шт</strong>0 р.</li>
+									<li><i class="fa fa-circle-o squareSmall outline"></i> <strong>Окантовка трубы</strong>400 р.</li>
+									<li><i class="fa fa-lightbulb-o squareSmall outline"></i> <strong>Установка люстры:1шт</strong>400 р.</li>
 							</ul>
-							<div class="predl-uslugi-itogo"><b>ИТОГО:</b> 3 670<i class="fa fa-rub" aria-hidden="true"></i></div>
-							<a class="btn btn-dark btn-lg" href="/static/joyus/projects1.html" title="Смотреть подробнее">Смотреть подробнее<i class="fa fa-chevron-circle-right"></i></a>
+							<div class="predl-uslugi-itogo"><b>ИТОГО:</b> 3 600<i class="fa fa-rub" aria-hidden="true"></i></div>
+							{# <a class="btn btn-dark btn-lg" href="/static/joyus/projects1.html" title="Смотреть подробнее">Смотреть подробнее<i class="fa fa-chevron-circle-right"></i></a> #}
 						</div>
 					</li>
 					<li>
@@ -116,13 +116,13 @@
 						<div class="project-data">
 							<h3>Натяжной потолок в детской комнате</h3>
 							<ul>
-									<li><i class="fa fa-object-ungroup squareSmall outline"></i> <strong>Монтаж полотна 15 м2</strong>1 900 р.</li>
-									<li><i class="fa fa-square-o squareSmall outline"></i> <strong>Количество углов 4 шт</strong>1 900 р.</li>
-									<li><i class="fa fa-circle-o squareSmall outline"></i> <strong>Окантовка трубы</strong>1 900</li>
-									<li><i class="fa fa-lightbulb-o squareSmall outline"></i> <strong>Установка люстры:1шт</strong>50,000 р.</li>
+									<li><i class="fa fa-object-ungroup squareSmall outline"></i> <strong>Монтаж полотна 15 м2</strong>5 250 р.</li>
+									<li><i class="fa fa-square-o squareSmall outline"></i> <strong>Количество углов 4 шт</strong>0 р.</li>
+									<li><i class="fa fa-circle-o squareSmall outline"></i> <strong>Окантовка трубы</strong>400 р.</li>
+									<li><i class="fa fa-lightbulb-o squareSmall outline"></i> <strong>Установка люстры:1шт</strong>400 р.</li>
 							</ul>
-							<div class="predl-uslugi-itogo"><b>ИТОГО:</b> 3 670<i class="fa fa-rub" aria-hidden="true"></i></div>
-							<a class="btn btn-dark btn-lg" href="/static/joyus/projects1.html" title="Смотреть подробнее">Смотреть подробнее<i class="fa fa-chevron-circle-right"></i></a>
+							<div class="predl-uslugi-itogo"><b>ИТОГО:</b> 6 050<i class="fa fa-rub" aria-hidden="true"></i></div>
+							{# <a class="btn btn-dark btn-lg" href="/static/joyus/projects1.html" title="Смотреть подробнее">Смотреть подробнее<i class="fa fa-chevron-circle-right"></i></a> #}
 						</div>
 					</li>
 					<li>
@@ -130,13 +130,13 @@
 						<div class="project-data">
 							<h3>Натяжной потолок в гостиной</h3>
 							<ul>
-									<li><i class="fa fa-object-ungroup squareSmall outline"></i> <strong>Монтаж полотна 20 м2</strong>1 900 р.</li>
-									<li><i class="fa fa-square-o squareSmall outline"></i> <strong>Количество углов 4 шт</strong>1 900 р.</li>
-									<li><i class="fa fa-circle-o squareSmall outline"></i> <strong>Окантовка трубы</strong>1 900</li>
-									<li><i class="fa fa-lightbulb-o squareSmall outline"></i> <strong>Установка люстры:1шт</strong>50,000 р.</li>
+									<li><i class="fa fa-object-ungroup squareSmall outline"></i> <strong>Монтаж полотна 20 м2</strong>7 000 р.</li>
+									<li><i class="fa fa-square-o squareSmall outline"></i> <strong>Количество углов 4 шт</strong>0 р.</li>
+									<li><i class="fa fa-circle-o squareSmall outline"></i> <strong>Окантовка трубы</strong>400 р.</li>
+									<li><i class="fa fa-lightbulb-o squareSmall outline"></i> <strong>Установка люстры:1шт</strong>400 р.</li>
 							</ul>
-							<div class="predl-uslugi-itogo"><b>ИТОГО:</b> 3 670<i class="fa fa-rub" aria-hidden="true"></i></div>
-							<a class="btn btn-dark btn-lg" href="/static/joyus/projects1.html" title="Смотреть подробнее">Смотреть подробнее<i class="fa fa-chevron-circle-right"></i></a>
+							<div class="predl-uslugi-itogo"><b>ИТОГО:</b> 7 800<i class="fa fa-rub" aria-hidden="true"></i></div>
+							{# <a class="btn btn-dark btn-lg" href="/static/joyus/projects1.html" title="Смотреть подробнее">Смотреть подробнее<i class="fa fa-chevron-circle-right"></i></a> #}
 						</div>
 					</li>
 
@@ -145,13 +145,13 @@
 						<div class="project-data">
 							<h3>Натяжной потолок в спальне</h3>
 							<ul>
-									<li><i class="fa fa-object-ungroup squareSmall outline"></i> <strong>Монтаж полотна 12 м2</strong>1 900 р.</li>
-									<li><i class="fa fa-square-o squareSmall outline"></i> <strong>Количество углов 4 шт</strong>1 900 р.</li>
-									<li><i class="fa fa-circle-o squareSmall outline"></i> <strong>Окантовка трубы</strong>1 900 р.</li>
-									<li><i class="fa fa-lightbulb-o squareSmall outline"></i> <strong>Установка люстры:1шт</strong>50,000 р.</li>
+									<li><i class="fa fa-object-ungroup squareSmall outline"></i> <strong>Монтаж полотна 12 м2</strong>4 200 р.</li>
+									<li><i class="fa fa-square-o squareSmall outline"></i> <strong>Количество углов 4 шт</strong>0 р.</li>
+									<li><i class="fa fa-circle-o squareSmall outline"></i> <strong>Окантовка трубы</strong>400 р.</li>
+									<li><i class="fa fa-lightbulb-o squareSmall outline"></i> <strong>Установка люстры:1шт</strong>400 р.</li>
 							</ul>
-							<div class="predl-uslugi-itogo"><b>ИТОГО:</b> 3 670<i class="fa fa-rub" aria-hidden="true"></i></div>
-							<a class="btn btn-dark btn-lg" href="/static/joyus/projects1.html" title="Смотреть подробнее">Смотреть подробнее<i class="fa fa-chevron-circle-right"></i></a>
+							<div class="predl-uslugi-itogo"><b>ИТОГО:</b> 5 000<i class="fa fa-rub" aria-hidden="true"></i></div>
+							{# <a class="btn btn-dark btn-lg" href="/static/joyus/projects1.html" title="Смотреть подробнее">Смотреть подробнее<i class="fa fa-chevron-circle-right"></i></a> #}
 						</div>
 					</li>
 				</ul>
@@ -165,7 +165,7 @@
 	<div class="col-md-12">
 		<div class="section-heading folio-home">
 			<h3><i class="fa fa-picture-o" aria-hidden="true"></i>Наши работы</h3>
-				<a class="btn btn-primary border-round" href="/projects" title="Смотреть еще">Смотреть все работы<i class="fa fa-chevron-circle-right"></i></a>
+				{# <a class="btn btn-primary border-round" href="/projects" title="Смотреть еще">Смотреть все работы<i class="fa fa-chevron-circle-right"></i></a> #}
 			<div class="clear"></div>
 		</div>
 	</div>
