--- a/core/templates/core/tags/footer.html
+++ b/core/templates/core/tags/footer.html
@@ -20,7 +20,7 @@
 				
 		</div>
 		<div class="col-md-4 col-sm-12 col-xs-12 content-box wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="0.50s">
-			<h5>Натяжные поолки от компании "Joyus"</h5>
+			<h5>Натяжные поолки от компании "Potolok Like"</h5>
 			<p>Результатом работы мастеров нашей компании станут прочные, красивые натяжные потолки недорого, которые удачно замаскируют системы освещения, кондиционирования, сигнализации, станут достойным украшением интерьера. Установка конструкции не разорит семейный бюджет, так как стоимость работ с установкой составляет 390 руб. за 1 м 2. Высокое качество материалов, идеальный монтаж гарантируют сохранение функциональных и эстетических показателей в течение многих лет.</p>
 		</div><!-- end content box -->
 		
@@ -48,9 +48,11 @@
 			<h5>Контактная информация</h5>
 			<div class="office">
 				<span><i class="fa fa-map-marker"></i>г. Новороссийск<br>
-					Краснодарский край</span> 
-				<span><i class="fa fa-phone"></i> (123) 456-7890</span>
-				<span><i class="fa fa-envelope-o"></i> <a href="/static/joyus/mailto:info@companynme.com" title="">info@companynme.com</a> </span>
+					Краснодарский край <br>
+					пр. Дзержинского, 183, офис 5.
+					</span>
+				<span><i class="fa fa-phone"></i> +7 (900) 270 25 95</span>
+				<span><i class="fa fa-envelope-o"></i> <a href="/static/joyus/mailto:info@companynme.com" title="">joyus@bitrix24.ru</a> </span>
 			</div>   
 		</div><!-- end content box -->
 		
