--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -7,7 +7,7 @@
 <html lang="en"><head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<title>{{ title }} | Натяжные потолки Joy Us</title>
+<title>{{ title }} | Натяжные потолки Potolok Like</title>
 <meta name="description"  content="{{ description }}"/>
 <meta name="keywords" content="{{ keywords }}">
 <meta name="author" content="Saptarang">
