--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -341,7 +341,7 @@
 						<div class="pic"></div>
 						<div class="info">
 							<h4>Суворов Андрей<span>22.03.2016</span></h4>
-							<p>Компания "JOYUS" устанавливала натяжные потолки в ванной и на кухне. Очень понравилось багатая цветовая гамма. От такой красоты тяжело определиться с выбором. Смотрится очень дорого. В использовании практичный, очень легко моется. Потолок-сказка !!! Спасибо компании за качественную работу !!!</p>
+							<p>Компания "Potolok Like" устанавливала натяжные потолки в ванной и на кухне. Очень понравилось багатая цветовая гамма. От такой красоты тяжело определиться с выбором. Смотрится очень дорого. В использовании практичный, очень легко моется. Потолок-сказка !!! Спасибо компании за качественную работу !!!</p>
 						</div>
 					</div>
 
@@ -358,7 +358,7 @@
 						<div class="pic"></div>
 						<div class="info">
 							<h4>Алексей Николаевич<span>12.03.2016</span></h4>
-							<p>Устанавливали натяжные потолки от компании "JOYUS", остались довольны, бригада работала опытная, установили  за 2 дня 78кв.м., зато качественно. Мы узнали о компании от знакомых, они устанавливали потолки буквально летом, вроде тоже все отлично, иначе бы не стали советовать. в общем, молодцы, успехов вам, спасибо!!</p>
+							<p>Устанавливали натяжные потолки от компании "Potolok Like", остались довольны, бригада работала опытная, установили  за 2 дня 78кв.м., зато качественно. Мы узнали о компании от знакомых, они устанавливали потолки буквально летом, вроде тоже все отлично, иначе бы не стали советовать. в общем, молодцы, успехов вам, спасибо!!</p>
 						</div>
 					</div>
 
@@ -366,7 +366,7 @@
 						<div class="pic"></div>
 						<div class="info">
 							<h4>Любовь<span>06.02.2016</span></h4>
-							<p>Хорошая компания "JOYUS". Они устанавливали нам натяжной потолок. Справились быстро и без лишней грязи. Их мастера помогли разобраться с освещением и выбором цвета полотна.  Я осталась довольна. Думаю будем обращаться к ним еще раз!</p>
+							<p>Хорошая компания "Potolok Like". Они устанавливали нам натяжной потолок. Справились быстро и без лишней грязи. Их мастера помогли разобраться с освещением и выбором цвета полотна.  Я осталась довольна. Думаю будем обращаться к ним еще раз!</p>
 						</div>
 					</div>
 				</li><!-- end item -->
