--- a/core/templates/core/tags/footer.html
+++ b/core/templates/core/tags/footer.html
@@ -52,7 +52,7 @@
 					пр. Дзержинского, 183, офис 5.
 					</span>
 				<span><i class="fa fa-phone"></i> +7 (900) 270 25 95</span>
-				<span><i class="fa fa-envelope-o"></i> <a href="/static/joyus/mailto:info@companynme.com" title="">joyus@bitrix24.ru</a> </span>
+				<span><i class="fa fa-envelope-o"></i> <a href="/static/joyus/mailto:info@companynme.com" title="">hello@potolok-like.ru</a> </span>
 			</div>   
 		</div><!-- end content box -->
 		
