--- a/core/templates/core/tags/footer.html
+++ b/core/templates/core/tags/footer.html
@@ -65,6 +65,9 @@
 				<p>Разработка сайта<a href="http://evilmonkey.ru/" title="Evilmonkey" target="_blank"><strong>Evilmonkey</strong></a></p>
 			</div>
 		</div><!-- end container -->
+		<div class="metrika">
+			<!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter37595375 = new Ya.Metrika({ id:37595375, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/37595375" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
+		</div>
 	</div><!-- end copyright --> 
 
 </footer>
