Правки на главной

--- a/configs/templates/configs/contacts.html
+++ b/configs/templates/configs/contacts.html
@@ -20,14 +20,12 @@
 					<h2 class="white text-center">Свяжитесь с нами</h2>
 					<hr class="light">
 					<div class="col-md-4 col-sm-12 col-xs-12">
-						<span><i class="fa fa-map-marker squareSmall BGsec"></i> Адрес: г. Новороссийск,<br>
-							проспект Дзержинского, 183, офис 5.</span>
+						<span><i class="fa fa-map-marker squareSmall BGsec"></i> Адрес: г. Краснодар,</br>ул.Чайковского 27</br> (цокальный этаж)</span>
 					</div>
 					<div class="col-md-4 col-sm-12 col-xs-12">
 						<span><i class="fa fa-phone squareSmall BGsec"></i>
-							{% for phone in config.get_all_phones %}
-								{{ phone.site_phone }}<br/>
-							{% endfor %}
+							‎+7 (962) 762-15-55</br> 
+							‎+7 (961) 826-40-94
 						</span>
 					 </div>
 						<div class="col-md-4 col-sm-12 col-xs-12">
