--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -11,7 +11,7 @@
 				<img class="img-responsive" src="/static/joyus/images/slider/slide1.jpg" alt="" />
 				<div class="symbol">
 					<div class="absShape text-center">
-						<p>Натяжные потолки<small>Под ключ за 200 ₽ м<sup>2</sup></small></p>
+						<p>Натяжные потолки<small>Под ключ за 300 ₽ м<sup>2</sup></small></p>
 					</div>
 					<div class="square3 opaque"></div>
 					<div class="square2 opaque"></div>
@@ -29,18 +29,6 @@
 					<div class="square2 opaque"></div>
 				</div>
 			</li>
-			<li>
-				<img class="img-responsive" src="/static/joyus/images/slider/slide3.jpg" alt="" />
-				<div class="symbol">
-					<div class="absShape text-center">
-							 <p>Бесплатно<small>Установим люстры</small></p>
-					</div>
-
-					<div class="square3 opaque"></div>
-					<div class="square2 opaque"></div>
-					<div class="square1 opaque"></div>
-				</div>
-			</li>
 		</ul>
 	</section>
 {% endblock slider %}
@@ -50,7 +38,7 @@
 	<section  class=" page-block-large">
 		<div class="container">
 			<div class="seo-title">
-				<h1>Натяжные потолки в Новороссийске</h1>
+				<h1>Натяжные потолки в Краснодаре</h1>
 			</div>
 			<div id="owl-recent-project-2" class="owl-carousel owl-theme">
 				{% for ceiling in ceilings %}
@@ -92,7 +80,7 @@
 		<div class="col-md-12">
 			<div class="section-heading">
 				<h2><i class="fa fa-rub square BGsec"></i>Стоимость натяжного потолка<small>по типу помещения</small></h2>
-				<a class="btn btn-primary border-round" href="/static/joyus/projects-2col.html" title="View All Projects">Смотреть еще <i class="fa fa-chevron-circle-right"></i></a>
+				<!--<a class="btn btn-primary border-round" href="/static/joyus/projects-2col.html" title="View All Projects">Смотреть еще <i class="fa fa-chevron-circle-right"></i></a>-->
 				<div class="clear"></div>
 			</div>
 
@@ -299,14 +287,14 @@
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 						<i class="fa fa-thumbs-o-up fa-4x"></i>
-						<h1 class="timer wow zoomIn" data-wow-delay="700ms" data-from="0" data-to="548" data-speed="4000"></h1>
+						<h1 class="timer wow zoomIn" data-wow-delay="700ms" data-from="0" data-to="2570" data-speed="4000"></h1>
 						<span class="line"></span>
 						<h4>Выполненных заказов</h4>
 						 Мы всегда думаем об наших клиентах
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 						<i class="fa fa-trophy fa-4x"></i>
-						<h1 class="timer wow zoomIn" data-wow-delay="900ms" data-from="0" data-to="5" data-speed="4000"></h1>
+						<h1 class="timer wow zoomIn" data-wow-delay="900ms" data-from="0" data-to="8" data-speed="4000"></h1>
 						<span class="line"></span>
 						<h4>Лет работы</h4>
 						У нас богатый опыт и мы спарвимся с Вашим заказом
@@ -393,26 +381,6 @@
 	</section>
 {% endblock testimonials %}
 
-
-{% block clients %}
-	<section class="client page-block">
-		<div class="container">
-			<div class="col-md-5 col-sm-5 col-xs-12 wow ">
-					<h2><i class="fa fa-diamond square BGsec"></i>Марки натяжных потолков<small>Мы работаем только с проверенными производителями натяжных потолков</small></h2>
-			</div>
-
-			<div class="col-md-7 col-sm-7 col-xs-12 wow">
-				<div class="slider4">
-					<div class="slide"><img src="/static/joyus/images/clients/01.png" alt="Client name"></div>
-					<div class="slide"><img src="/static/joyus/images/clients/02.png" alt="Client name"></div>
-					<div class="slide"><img src="/static/joyus/images/clients/03.png" alt="Client name"></div>
-					<div class="slide"><img src="/static/joyus/images/clients/04.png" alt="Client name"></div>
-					<div class="slide"><img src="/static/joyus/images/clients/05.png" alt="Client name"></div>
-				</div>
-			</div><!-- end col-md-4 -->
-		</div><!-- end container -->
-	</section>
-{% endblock clients %}
 
 
 {% block call_to_action %}
