--- a/core/templates/core/tags/footer.html
+++ b/core/templates/core/tags/footer.html
@@ -4,13 +4,6 @@
 		<div class="col-md-12 col-sm-12 col-xs-12 wow fadeInDown" data-wow-duration="0.50s" data-wow-delay="0.50s">
 			<img class="img-responsive pull-left" src="/static/joyus/images/company-grey.png" width="200" height="50" alt="" />
 				<ul class="social list-inline pull-right">
-					<li><a class="fb" href="/static/joyus/index.html#" title="Follow Us on Facebook" data-toggle="tooltip" data-placement="top"><i class="fa fa-facebook"></i></a></li>
-					<li><a class="tw" href="/static/joyus/index.html#" title="Follow Us on Twitter" data-toggle="tooltip" data-placement="top"><i class="fa fa-twitter"></i></a></li>
-					<li><a class="yt" href="/static/joyus/index.html#" title="Watch Our Videos" data-toggle="tooltip" data-placement="top"><i class="fa fa-youtube-play"></i></a></li>
-					<li><a class="pt" href="/static/joyus/index.html#" title="Watch Our Videos" data-toggle="tooltip" data-placement="top"><i class="fa fa-pinterest"></i></a></li>
-					<li><a class="li" href="/static/joyus/index.html#" title="Follow Us on LinkedIn" data-toggle="tooltip" data-placement="top"><i class="fa fa-linkedin"></i></a></li>
-					<li><a class="fl" href="/static/joyus/index.html#" title="Watch Our gallery" data-toggle="tooltip" data-placement="top"><i class="fa fa-flickr"></i></a></li>
-					<li><a class="gplus" href="/static/joyus/index.html#" title="Google Plus" data-toggle="tooltip" data-placement="top"><i class="fa fa-google-plus"></i></a></li>
 					<li><a class="ig" href="/static/joyus/index.html#" title="Watch Our Gallery" data-toggle="tooltip" data-placement="top"><i class="fa fa-instagram"></i></a></li>
 					<li><a class="vk" href="/static/joyus/index.html#" title="Follow Us on vk" data-toggle="tooltip" data-placement="top"><i class="fa fa-vk"></i></a></li>
 				</ul>
@@ -47,11 +40,10 @@
 		<div class="col-md-3 col-sm-4 col-xs-12 content-box wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="1.25s">
 			<h5>Контактная информация</h5>
 			<div class="office">
-				<span><i class="fa fa-map-marker"></i>г. Новороссийск<br>
-					Краснодарский край <br>
-					пр. Дзержинского, 183, офис 5.
+				<span><i class="fa fa-map-marker"></i>г. Краснодар<br>
+					г.Краснодар ул.Чайковского 27<br> (цокольный этаж)
 					</span>
-				<span><i class="fa fa-phone"></i> +7 (900) 270 25 95</span>
+				<span><i class="fa fa-phone"></i>‎+7 (962) 762-15-55</span>
 				<span><i class="fa fa-envelope-o"></i> <a href="/static/joyus/mailto:info@companynme.com" title="">hello@potolok-like.ru</a> </span>
 			</div>   
 		</div><!-- end content box -->
@@ -66,7 +58,6 @@
 			</div>
 		</div><!-- end container -->
 		<div class="metrika">
-			<!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter37595375 = new Ya.Metrika({ id:37595375, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/37595375" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 		</div>
 	</div><!-- end copyright --> 
 
