--- a/configs/templates/configs/tags/calculator_form.html
+++ b/configs/templates/configs/tags/calculator_form.html
@@ -8,48 +8,50 @@
             <form id="calculator_form">{% csrf_token %}
                 <div class="modal-body">
                     <div class="calcilator-modal" style="overflow: hidden">
-                        <div class="col-md-6">
-                        <label for="">Площадь потолка<span class="fx_waring">*</span></label>
-                        {{ form.square }}
-                        <span class="fx_input">м²</span>
-                    </div>
-                    <div class="col-md-6">
-                        <label for="">Количество углов<span class="fx_waring">*</span></label>
-                        {{ form.angle }}
-                        <span class="fx_input">шт.</span>
-                    </div>
-                    <div class="col-md-6">
-                        <label for="">Фактура полотна<span class="fx_waring">*</span></label>
-                        {{ form.tip_polotna }}
-                    </div>
-                    <div class="col-md-6">
-                        <label for="">Торговая марка потолка</label>
-                        {{ form.brend_polotna }}
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-bottom">
-                            <label for="">Трубы уходящие в потолок:</label>
-                            {{ form.tube }}
+                        <ul>
+                        <li class="cal-li">
+                            <label for="">Площадь потолка<span class="fx_waring">*</span></label>
+                            {{ form.square }}
+                            <span class="fx_input">м²</span>
+                        </li>
+                        <li class="cal-li">
+                            <label for="">Количество углов<span class="fx_waring">*</span></label>
+                            {{ form.angle }}
                             <span class="fx_input">шт.</span>
-                        </div>
+                        </li>
+                        <li class="cal-li">
+                            <label for="">Фактура полотна<span class="fx_waring">*</span></label>
+                            {{ form.tip_polotna }}
+                        </li>
+                    <li class="cal-li">
                         <div class="form-bottom form-height">
                             <label for="">Отверстие под крючковую люстру:</label>
                             {{ form.perforation }}
                             <span class="fx_input">шт.</span>
                         </div>
-                    </div>
-                    <div class="col-md-6">
+                    </li>
+                    <li class="cal-li">
+                        <div class="form-bottom">
+                            <label for="">Трубы уходящие в потолок:</label>
+                            {{ form.tube }}
+                            <span class="fx_input">шт.</span>
+                        </div>
+                    </li>
+                    <li class="cal-li">
                         <div class="form-bottom">
                             <label for="">Закладная под потолочную люстру:</label>
                             {{ form.zakladnaya }}
                             <span class="fx_input">шт.</span>
                         </div>
+                    </li>
+                    <li class="cal-li">
                         <div class="form-bottom">
                             <label for="">Стойка под встраиваемый светильник:</label>
                             {{ form.strut }}
                             <span class="fx_input">шт.</span>
                         </div>
-                    </div>
+                    </li>
+                </ul>
                     <div class="col-md-12">
                         {{ form.phone }}
                     </div>
