--- a/core/templates/core/tags/footer.html
+++ b/core/templates/core/tags/footer.html
@@ -41,7 +41,7 @@
 			<h5>Контактная информация</h5>
 			<div class="office">
 				<span><i class="fa fa-map-marker"></i>г. Краснодар<br>
-					г.Краснодар ул.Чайковского 27<br> (цокольный этаж)
+					ул.Чайковского 27<br> (цокольный этаж)
 					</span>
 				<span><i class="fa fa-phone"></i>‎+7 (962) 762-15-55</span>
 				<span><i class="fa fa-envelope-o"></i> <a href="/static/joyus/mailto:info@companynme.com" title="">hello@potolok-like.ru</a> </span>
