--- a/configs/templates/configs/contacts.html
+++ b/configs/templates/configs/contacts.html
@@ -11,7 +11,7 @@
 {% block content %}
 {% render_breadcrumbs "configs/breadcrumbs/main.html" %}
 
-<div class="maps"><script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=xGK20cc5MXFh6qtfs2GKiRbxowx7vkjy&width=100%&height=432&lang=ru_RU&sourceType=constructor"></script></div>
+<div class="maps"><script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ad33dd6f83af767e94e7f5d62727be2fbf83fa17e6ba9d98c8b3b0ab122c56061&amp;width=100%25&amp;height=484&amp;lang=ru_RU&amp;scroll=true"></script></div>
 
 <section id="contact" class="opt">
 	<div class="contact-info BGprime page-block">
