--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -290,14 +290,14 @@
 						<h1 class="timer wow zoomIn" data-wow-delay="700ms" data-from="0" data-to="2570" data-speed="4000"></h1>
 						<span class="line"></span>
 						<h4>Выполненных заказов</h4>
-						 Мы всегда думаем об наших клиентах
+						 Мы всегда думаем о наших клиентах
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 						<i class="fa fa-trophy fa-4x"></i>
 						<h1 class="timer wow zoomIn" data-wow-delay="900ms" data-from="0" data-to="8" data-speed="4000"></h1>
 						<span class="line"></span>
 						<h4>Лет работы</h4>
-						У нас богатый опыт и мы спарвимся с Вашим заказом
+						У нас богатый опыт и мы справимся с Вашим заказом
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 						<i class="fa fa-rocket fa-4x"></i>
@@ -388,13 +388,13 @@
 		<div class="boxedw page-block">
 			<div class="container">
 				<div class="widget wow fadeInLeft" data-wow-duration="0.30s" data-wow-delay="0.30s">
-						<h2>Калькулятор<small>Расчитайте стоимость своего потолка</small></h2>
-						<p>Внесите параметры своего потолка и мы расчитаем Вам точную стоимость.</p>
-						<button class="btn btn-primary border-round" data-toggle="modal" data-target="#myModal-calculator">Расчитать потолок<i class="fa fa-chevron-circle-right"></i></button>
+						<h2>Калькулятор<small>Рассчитайте стоимость своего потолка</small></h2>
+						<p>Внесите параметры своего потолка и мы рассчитаем Вам стоимость.</p>
+						<button class="btn btn-primary border-round" data-toggle="modal" data-target="#myModal-calculator">Рассчитать потолок<i class="fa fa-chevron-circle-right"></i></button>
 						<i class="fa fa-calculator"></i>
 				</div>
 				<div class="widget wow fadeInRight" data-wow-duration="0.30s" data-wow-delay="0.30s">
-					<h2>Вызвать замерщика<small>Введите свой номер телефона и мы перезваним Вам в течении минуты</small></h2>
+					<h2>Вызвать замерщика<small>Введите свой номер телефона и мы перезвоним Вам в течение минуты</small></h2>
 					<form id="zamer-form">{% csrf_token %}
 						<div class="form-row">
 							 <input type="tel" class="phone phone-zamer form-control"name="phone" value="" placeholder="Ваш номер телефона">
