--- a/configs/templates/configs/tags/calculator_form.html
+++ b/configs/templates/configs/tags/calculator_form.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h3 class="modal-title" id="myModalLabel">Расчитать сстоимость потолка</h3>
+                <h3 class="modal-title" id="myModalLabel">Рассчитать сстоимость потолка</h3>
             </div>
             <form id="calculator_form">{% csrf_token %}
                 <div class="modal-body">
