--- a/core/templates/core/tags/footer.html
+++ b/core/templates/core/tags/footer.html
@@ -13,7 +13,7 @@
 				
 		</div>
 		<div class="col-md-4 col-sm-12 col-xs-12 content-box wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="0.50s">
-			<h5>Натяжные поолки от компании "Potolok Like"</h5>
+			<h5>Натяжные потолки от компании "Potolok Like"</h5>
 			<p>Результатом работы мастеров нашей компании станут прочные, красивые натяжные потолки недорого, которые удачно замаскируют системы освещения, кондиционирования, сигнализации, станут достойным украшением интерьера. Установка конструкции не разорит семейный бюджет, так как стоимость работ с установкой составляет 390 руб. за 1 м 2. Высокое качество материалов, идеальный монтаж гарантируют сохранение функциональных и эстетических показателей в течение многих лет.</p>
 		</div><!-- end content box -->
 		
