--- a/project/templates/sitetree/menu.html
+++ b/project/templates/sitetree/menu.html
@@ -2,7 +2,7 @@
 
 <ul class="nav navbar-nav">
 			<li>
-				<a href="#" data-toggle="modal" data-target="#myModal-calculator">Расчитать потолок</a>
+				<a href="#" data-toggle="modal" data-target="#myModal-calculator">Рассчитать потолок</a>
 			</li>
 	{% for item in sitetree_items %}
 		{% if item.has_children %}
