--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -304,7 +304,7 @@
 						<h1 class="timer wow zoomIn" data-wow-delay="1100ms" data-from="0" data-to="3" data-speed="4000"></h1>
 						<span class="line"></span>
 						<h4>Часа на установку</h4>
-						За максимально короткое время мы натянем потолки в Вашем доме
+						За максимально короткое время установим потолки в вашем доме
 				</div>
 			</div><!-- end container -->
 		</div><!-- end boxBg -->
@@ -319,7 +319,7 @@
 
 			<div class="section-heading">
 					<h2><i class="fa fa-quote-left square BGsec"></i>Отзывы клиентов<small>Нас всегда рекомендуют своим друзьям!</small></h2>
-					<a class="btn btn-primary border-round" href="/static/joyus/testimonials.html" title="View All Testimonials">Смотреть все отзывы<i class="fa fa-chevron-circle-right"></i></a>
+					<!--<a class="btn btn-primary border-round" href="/static/joyus/testimonials.html" title="View All Testimonials">Смотреть все отзывы<i class="fa fa-chevron-circle-right"></i></a>-->
 					<div class="clear"></div>
 			</div>
 
