--- a/configs/templates/configs/tags/calculator_form.html
+++ b/configs/templates/configs/tags/calculator_form.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h3 class="modal-title" id="myModalLabel">Рассчитать сстоимость потолка</h3>
+                <h3 class="modal-title" id="myModalLabel">Рассчитать стоимость потолка</h3>
             </div>
             <form id="calculator_form">{% csrf_token %}
                 <div class="modal-body">
@@ -56,7 +56,7 @@
                         {{ form.phone }}
                     </div>
                     <div class="col-md-12 form-text">
-                        <p>Отправте размеры и значения Вашенго поталка,мы перезвоним и скажем Вам точную стоимость натяжного потолка.</p>
+                        <p>Отправьте размеры и значения Вашего поталка,мы перезвоним и скажем Вам точную стоимость натяжного потолка.</p>
                     </div>
                     </div>
                 </div>
