--- a/core/templates/core/tags/footer.html
+++ b/core/templates/core/tags/footer.html
@@ -14,13 +14,14 @@
 		</div>
 		<div class="col-md-4 col-sm-12 col-xs-12 content-box wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="0.50s">
 			<h5>Натяжные потолки от компании "Potolok Like"</h5>
-			<p>Результатом работы мастеров нашей компании станут прочные, красивые натяжные потолки недорого, которые удачно замаскируют системы освещения, кондиционирования, сигнализации, станут достойным украшением интерьера. Установка конструкции не разорит семейный бюджет, так как стоимость работ с установкой составляет 390 руб. за 1 м 2. Высокое качество материалов, идеальный монтаж гарантируют сохранение функциональных и эстетических показателей в течение многих лет.</p>
+			<p>
+				Результатом работы мастеров нашей компании станут прочные ,красивые , современные натяжные потолки . Они удачно замаскируют системы освещения , кондиционирования , сигнализации  и станут достойным украшением интерьера . Остановив свой выбор на натяжных потолках ,вы не разорите свой бюджет,так как стоимость установки ,включая материалы составляет от 300 руб. за 1м2. Высокое качество материалов ,идеальный монтаж гарантируют сохранение функциональных и эстетических показателей в течении многих лет.</p>
 		</div><!-- end content box -->
 		
 		<div class="col-md-2 col-sm-3 col-xs-12 content-box wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="0.75s">
-			<h5>Посетите станицы</h5>
+			<h5>Посетите страницы</h5>
 			<ul>
-				<li><a href="#">Акции</a></li>
+				<li><a href="/pages/akcii">Акции</a></li>
 				<li><a href="/projects" title="Наши работы">Наши работы</a></li>
 				<li><a href="/natyazhnye-potolki" title="Наши услуги">Наши услуги</a></li>
 				<li><a href="/posts" title="Интересные статьи">Интересные статьи</a></li>
@@ -28,12 +29,11 @@
 		</div><!-- end content box -->
 		
 		<div class="col-md-3 col-sm-5 col-xs-12 content-box wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="1s">
-			<h5>Сервиз и потдержка</h5>
+			<h5>Сервиc и потддержка</h5>
 			<ul>
 				<li><a href="/pages/contacts/" title="Commercial design">Контакты</a></li>
-				<li><a href="#" title="Расчет стоимости потолка">Расчет стоимости потолка</a></li>
-				<li><a href="#" title="Вызов замерщика">Вызов замерщика</a></li>
-				<li><a href="#" title="Прайс лист">Прайс лист</a></li>
+				<li><a href="#" data-toggle="modal" data-target="#myModal-calculator">Рассчитать потолок</a></li>
+				<li><a href="/pages/ceny/" title="Прайс лист">Прайс лист</a></li>
 			</ul>
 		</div><!-- end content box -->
 		
