--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -132,10 +132,10 @@
 				<div class="modal-content">
 					<div class="modal-header" id="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-						<h3 class="modal-title">Ваша заявка отправленна</h3>
+						<h3 class="modal-title">Ваша заявка отправлена</h3>
 					</div>
 					<div class="modal-body" id="modal-body">
-						<strong>Вам перезвонят в теченни минуты</strong>
+						<strong>Вам перезвонят в течении минуты</strong>
 					</div>
 					<div class="modal-footer" id="modal-footer">
 						<button type="button" data-dismiss="modal" class="btn btn-primary">Закрыть</button>
