--- a/core/templates/core/tags/footer.html
+++ b/core/templates/core/tags/footer.html
@@ -29,7 +29,7 @@
 		</div><!-- end content box -->
 		
 		<div class="col-md-3 col-sm-5 col-xs-12 content-box wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="1s">
-			<h5>Сервиc и потддержка</h5>
+			<h5>Сервиc и поддержка</h5>
 			<ul>
 				<li><a href="/pages/contacts/" title="Commercial design">Контакты</a></li>
 				<li><a href="#" data-toggle="modal" data-target="#myModal-calculator">Рассчитать потолок</a></li>
