--- a/configs/templates/configs/tags/calculator_form.html
+++ b/configs/templates/configs/tags/calculator_form.html
@@ -56,7 +56,7 @@
                         {{ form.phone }}
                     </div>
                     <div class="col-md-12 form-text">
-                        <p>Отправьте размеры и значения Вашего поталка,мы перезвоним и скажем Вам точную стоимость натяжного потолка.</p>
+                        <p>Отправьте размеры и значения Вашего потолка,мы перезвоним и скажем Вам точную стоимость натяжного потолка.</p>
                     </div>
                     </div>
                 </div>
