--- a/configs/templates/configs/contacts.html
+++ b/configs/templates/configs/contacts.html
@@ -20,7 +20,7 @@
 					<h2 class="white text-center">Свяжитесь с нами</h2>
 					<hr class="light">
 					<div class="col-md-4 col-sm-12 col-xs-12">
-						<span><i class="fa fa-map-marker squareSmall BGsec"></i> Адрес: г. Краснодар,</br>ул.Чайковского 27</br> (цокальный этаж)</span>
+						<span><i class="fa fa-map-marker squareSmall BGsec"></i> Адрес: г. Краснодар,</br>ул.Чайковского 27</br> (цокольный этаж)</span>
 					</div>
 					<div class="col-md-4 col-sm-12 col-xs-12">
 						<span><i class="fa fa-phone squareSmall BGsec"></i>
