--- a/ceilings/templates/ceilings/filter_item.html
+++ b/ceilings/templates/ceilings/filter_item.html
@@ -53,7 +53,7 @@
 					<div class="text-right col-md-8 col-sm-12">
 						<strong>150</strong> Потолков установлено <span>|</span> <strong>03</strong> Проекта в работе
 					</div>
-				</div>-->
+				</div>
 
 				<div class="clear"></div>
 
